Bug 166958 - Ampache plug-in does not re-negotiate after receiving a 401 error
Summary: Ampache plug-in does not re-negotiate after receiving a 401 error
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-18 22:27 UTC by Karl Vollmer
Modified: 2009-05-27 03:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Vollmer 2008-07-18 22:27:42 UTC
Version:            (using KDE 4.0.98)
Installed from:    Unlisted Binary Package
OS:                Linux

Actually reported / found by Markey. When using the ampache plugin if you do not play anything for an extended period of time (determined by the ampache servers configuration) amarok doesn't correctly handle the fact that the session is now expired and that it needs to renegotiate
Comment 1 Karl Vollmer 2008-07-18 22:33:27 UTC
Oooh if there is additional information that needs to be added on the ampache end to accomplish this let me know
Comment 2 Mark Kretschmann 2008-07-31 16:38:30 UTC
SVN commit 840164 by markey:

Automatically re-authenticate connection if the Ampache server has logged us out.

Well I hope this works. Obviously I can't test it right now since Ampache will only log me out in a few hours. We'll see tomorrow morning ;)

BUG: 166958


 M  +3 -10     AmpacheService.cpp  
 M  +1 -3      AmpacheService.h  
 M  +10 -1     AmpacheServiceCollection.cpp  
 M  +5 -3      AmpacheServiceCollection.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=840164
Comment 3 Mark Kretschmann 2008-08-01 10:15:04 UTC
Meh, seems it's not really working. This morning when I got up Amarok failed to play any of the Ampache tracks.
Comment 4 Mark Kretschmann 2009-04-06 14:21:46 UTC
Karl, is there any chance of you helping us fixing this?

I assume it could be much easier for you than for the rest of us :)
Comment 5 Karl Vollmer 2009-04-06 14:36:46 UTC
Sure thing! I'll take a crack as soon as I get a chance.
Comment 6 Karl Vollmer 2009-05-27 03:07:46 UTC
This should be resolved by r973392 the issue was in the QueryMaker when trying to return a list of artists etc there was no check for failure so no re-authentication ever happened.