Automatically re-authenticate connection if the Ampache server has logged us out.

Well I hope this works. Obviously I can't test it right now since Ampache will only log me out in a few hours. We'll see tomorrow morning ;)

BUG: 166958

svn path=/trunk/extragear/multimedia/amarok/; revision=840164